force-app/main/default/objects/ProductsClassifier__c/ProductsClassifier__c.object-meta.xml
<CustomObject>
    <label>Products Classifier</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Classifier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>