force-app/main/default/objects/ProductsClassifier__c/fields/Group3__c.field-meta.xml
<CustomField>
    <fullName>Group3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>Group3__c</referenceTo>
    <relationshipLabel>Products Classifier</relationshipLabel>
    <relationshipName>Products_Classifier</relationshipName>
    <type>Lookup</type>
</CustomField>