force-app/main/default/objects/ProductsClassifier__c/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <formula>Group3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>