force-app/main/default/objects/ProductsClassifier__c/fields/HeaderName__c.field-meta.xml
<CustomField>
    <fullName>HeaderName__c</fullName>
    <formula>CASE(Level__c,
  4, Parent__r.Parent__r.Parent__r.Name + &apos; - &apos; + Parent__r.Parent__r.Name + &apos; - &apos; + Parent__r.Name + &apos; - &apos; + Name,
  3, Parent__r.Parent__r.Name + &apos; - &apos; + Parent__r.Name + &apos; - &apos; + Name,
  2, Parent__r.Name + &apos; - &apos; + Name,
  1, Name,
  Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeaderName</label>
    <type>Text</type>
</CustomField>