force-app/main/default/objects/ProductsClassifier__c/fields/IsAccessory__c.field-meta.xml
<CustomField>
    <fullName>IsAccessory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Accessory</label>
    <type>Checkbox</type>
</CustomField>