force-app/main/default/objects/ProductsClassifier__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>ProductsClassifier__c</referenceTo>
    <relationshipLabel>Products Classifier</relationshipLabel>
    <relationshipName>Products_Classifier</relationshipName>
    <type>Lookup</type>
</CustomField>