force-app/main/default/objects/ProductsClassifier__c/fields/ProdID__c.field-meta.xml
<CustomField>
    <fullName>ProdID__c</fullName>
    <label>ProdID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>