force-app/main/default/objects/ProductsClassifier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID_ERP__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsAccessory__c</columns>
    <columns>Level__c</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>